# indumi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test_expressions.txt  test_parser.rs
.github/workflows/: release.yml
docs/: tech-debt.md
src/: calc.rs  currency.rs  editor.rs  lib.rs  main.rs  parser.rs  ui.rs
tests/: integration_test.rs
