[package]
name = "indumi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indumi"
path = "src/main.rs"

[lib]
name = "indumi"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
regex = "1.11"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
